# lua---mattorch

./: CMakeLists.txt  FindMatlab.cmake  README.txt  mattorch-1.0-1.rockspec  mattorch.c  mattorch.lua  mattorchlive.c  mattorchlive.h  test.mat
mattorchlive/: compile.m  example-nomatlab.c  example.c  example.lua  libmattorchlive.dylib  mattorchlive.h
