SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR})

CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.6)
FIND_PACKAGE(Torch REQUIRED)
FIND_PACKAGE(Matlab REQUIRED)

INCLUDE_DIRECTORIES(${MATLAB_INCLUDE_DIR} ${TORCH_INCLUDE_DIR})
ADD_LIBRARY(mattorchlive SHARED mattorchlive.c)
LINK_DIRECTORIES(${TORCH_LIBRARY_DIR})
TARGET_LINK_LIBRARIES(mattorchlive TH luaT ${MATLAB_LIBRARIES})

SET(src mattorch.c)
SET(luasrc init.lua)
ADD_TORCH_PACKAGE(mattorch "${src}" "${luasrc}" "Compatibility Tools")
TARGET_LINK_LIBRARIES(mattorch luaT TH ${MATLAB_LIBRARIES})
