SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR})

CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.6)
IF(LUAROCKS_PREFIX)
    MESSAGE(STATUS "Installing Torch through Luarocks")
    STRING(REGEX REPLACE "(.*)lib/luarocks/rocks.*" "\\1" CMAKE_INSTALL_PREFIX  "${LUAROCKS_PREFIX}")
    MESSAGE(STATUS "Prefix inferred from Luarocks: ${CMAKE_INSTALL_PREFIX}")
ENDIF()
FIND_PACKAGE(Torch REQUIRED)
FIND_PACKAGE(Matlab REQUIRED)

INCLUDE_DIRECTORIES(${MATLAB_INCLUDE_DIR} ${TORCH_INCLUDE_DIR})
ADD_LIBRARY(mattorchlive SHARED mattorchlive.c)
LINK_DIRECTORIES(${TORCH_LIBRARY_DIR})
TARGET_LINK_LIBRARIES(mattorchlive TH luaT ${MATLAB_LIBRARIES})

SET(src mattorch.c)
SET(luasrc init.lua)
ADD_TORCH_PACKAGE(mattorch "${src}" "${luasrc}" "Compatibility Tools")
TARGET_LINK_LIBRARIES(mattorch luaT TH ${MATLAB_LIBRARIES})
